Try to make a post method in swagger but it doesnt work
